; ModuleID = '/home/carl/AnghaBench/i3/src/extr_x.c_update_shmlog_atom.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_x.c_update_shmlog_atom.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@shmlogname = common dso_local global i8* null, align 8
@conn = common dso_local global i32 0, align 4
@root = common dso_local global i32 0, align 4
@A_I3_SHMLOG_PATH = common dso_local global i32 0, align 4
@XCB_PROP_MODE_REPLACE = common dso_local global i32 0, align 4
@A_UTF8_STRING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @update_shmlog_atom() #0 {
  %1 = load i8*, i8** @shmlogname, align 8
  %2 = load i8, i8* %1, align 1
  %3 = sext i8 %2 to i32
  %4 = icmp eq i32 %3, 0
  br i1 %4, label %5, label %10

5:                                                ; preds = %0
  %6 = load i32, i32* @conn, align 4
  %7 = load i32, i32* @root, align 4
  %8 = load i32, i32* @A_I3_SHMLOG_PATH, align 4
  %9 = call i32 @xcb_delete_property(i32 %6, i32 %7, i32 %8)
  br label %20

10:                                               ; preds = %0
  %11 = load i32, i32* @conn, align 4
  %12 = load i32, i32* @XCB_PROP_MODE_REPLACE, align 4
  %13 = load i32, i32* @root, align 4
  %14 = load i32, i32* @A_I3_SHMLOG_PATH, align 4
  %15 = load i32, i32* @A_UTF8_STRING, align 4
  %16 = load i8*, i8** @shmlogname, align 8
  %17 = call i32 @strlen(i8* %16)
  %18 = load i8*, i8** @shmlogname, align 8
  %19 = call i32 @xcb_change_property(i32 %11, i32 %12, i32 %13, i32 %14, i32 %15, i32 8, i32 %17, i8* %18)
  br label %20

20:                                               ; preds = %10, %5
  ret void
}

declare dso_local i32 @xcb_delete_property(i32, i32, i32) #1

declare dso_local i32 @xcb_change_property(i32, i32, i32, i32, i32, i32, i32, i8*) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
